--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stripe/stripe-js": "^8.5.2",
     "@supabase/supabase-js": "^2.84.0",
     "@types/bcryptjs": "^2.4.6",
+    "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
